Add support for StreamImageSource (and others)
- Uses new AttributeValueHolder and related types to transport instances of ImageSource between Elements and ElementHandlers
- Updated AttributeHelper methods for ImageSource to use new AttributeValueHolder
- Updated ComponentWrapperGenerator to use new AttributeHelper names, and updated all elements and handlers with new code
- Added ControlGallery sample showing ImageSource.FromResource()

Fixes #175

--- a/samples/ControlGallery/ControlGallery/Views/CommonControls.razor
+++ b/samples/ControlGallery/ControlGallery/Views/CommonControls.razor
@@ -8,6 +8,11 @@
             <Span>Slider is @_sliderValue</Span>
         </Label>
 
+        <StackLayout Orientation="StackOrientation.Horizontal">
+            <Button Text="Favorite?" OnClick="ToggleFavorite" />
+
+            <Image Source="@(ImageSource.FromResource(isFavorite ? "ControlGallery.images.favorite.png" : "ControlGallery.images.not-favorite.png"))" />
+        </StackLayout>
     </StackLayout>
 </ContentView>
 
@@ -26,8 +31,14 @@
             if (_sliderValue != value)
             {
                 _sliderValue = value;
-                //StateHasChanged();
             }
         }
+    }
+
+    bool isFavorite;
+
+    void ToggleFavorite()
+    {
+        isFavorite = !isFavorite;
     }
 }
