Clean up control gallery playground navigation

--- a/samples/ControlGallery/ControlGallery/AppShell.razor
+++ b/samples/ControlGallery/ControlGallery/AppShell.razor
@@ -1,14 +1,11 @@
 ﻿@using ControlGallery.Views
+
 <Shell FlyoutBehavior="FlyoutBehavior.Disabled">
     <TabBar>
         <Tab>
             <ShellContent>
-                <NavigationSource></NavigationSource>
+                <PlaygroundList />
             </ShellContent>
-
         </Tab>
     </TabBar>
 </Shell>
-@code {
-
-}
