Support for Static Web Assets from Razor Class Libraries. (#178)
- Added RCL functionality for Windows, iOS, Android, and macOS.
- Each platform-specific WebView NuGet package has new MSBuild Props and Targets
- MobileBlazorBindingHost is used to provide services to BlazorWebView
- Update project templates
- Small fix for iOS/macOS: Don't crash for un-found static assets

Co-authored-by: Eilon Lipton <Eilon@users.noreply.github.com>

--- a/samples/HybridMessageApp/HybridMessageApp/MainPage.xaml
+++ b/samples/HybridMessageApp/HybridMessageApp/MainPage.xaml
@@ -14,7 +14,7 @@
 
             <MasterDetailPage.Master>
                 <ContentPage Title="Folders">
-                    <b:BlazorWebView x:TypeArguments="app:FolderList" ContentRoot="WebUI/wwwroot" VerticalOptions="FillAndExpand" />
+                    <b:BlazorWebView x:TypeArguments="app:FolderList" x:Name="FolderWebView" VerticalOptions="FillAndExpand" />
                 </ContentPage>
             </MasterDetailPage.Master>
 
