Fix elements removal for non-Layout parent (#219)
Fix elements removal for non-Layout parent
- Add new IXamarinFormsContainerElementHandler with AddChild/RemoveChild
- Fix all container controls to implement Add/Remove properly
- Update control gallery sample to add Shell items dynamically

Co-authored-by: Eilon Lipton <Eilon@users.noreply.github.com>

--- a/samples/ControlGallery/ControlGallery/AppShell.razor
+++ b/samples/ControlGallery/ControlGallery/AppShell.razor
@@ -2,10 +2,41 @@
 
 <Shell FlyoutBehavior="FlyoutBehavior.Disabled">
     <TabBar>
-        <Tab>
+        <Tab Title="Gallery">
             <ShellContent>
                 <PlaygroundList />
             </ShellContent>
         </Tab>
+        <Tab Title="Add/Remove">
+            <ContentPage Title="Adder">
+                <StackLayout>
+                    <Button OnClick="AddTab">Add Tab</Button>
+                    <Button IsEnabled="(count > 1)" OnClick="RemoveTab">Remove tab</Button>
+                </StackLayout>
+            </ContentPage>
+        </Tab>
+
+        @for (int i = 0; i < count; i++)
+        {
+            var currentIndex = i;
+            <ShellTab Title="@($"Tab #{currentIndex + 1}")" />
+        }
     </TabBar>
 </Shell>
+
+@code {
+    int count = 1;
+
+    void AddTab()
+    {
+        count++;
+    }
+
+    void RemoveTab()
+    {
+        if (count > 1)
+        {
+            count--;
+        }
+    }
+}
