Add ShellProperties for attached properties (#253)
* Add ShellProperties for attached properties
* Add ShellProperties sample

--- a/samples/ControlGallery/ControlGallery/AppShell.razor
+++ b/samples/ControlGallery/ControlGallery/AppShell.razor
@@ -7,6 +7,9 @@
                 <PlaygroundList />
             </ShellContent>
         </Tab>
+        <Tab Title="Shell Properties">
+            <ShellPropertiesPlayground />
+        </Tab>
         <Tab Title="Add/Remove">
             <ContentPage Title="Adder">
                 <StackLayout>
