--- a/samples/ControlGallery/ControlGallery/Views/PickerPlayground.razor
+++ b/samples/ControlGallery/ControlGallery/Views/PickerPlayground.razor
@@ -5,7 +5,6 @@
 
 <ContentView>
     <StackLayout>
-
         <Label Text="Picker Playground">
         </Label>
         <Label Text="Picker with models and all display properties"/>
@@ -115,5 +114,6 @@
         SelectedString = Strings.LastOrDefault();
         SelectedModelDefault = ModelsWithDefault.LastOrDefault();
         SelectedModelWithNull = null;
+        SelectedIndex = 2;
     }
 }
