--- a/samples/ControlGallery/ControlGallery/Views/PlaygroundList.razor
+++ b/samples/ControlGallery/ControlGallery/Views/PlaygroundList.razor
@@ -10,6 +10,7 @@
             <Button Text="Gesture playground" OnClick="@(async () => await NavigationManager.NavigateToAsync("/gestureplayground"))"></Button>
             <Button Text="Skia Playground" OnClick="@(async () => await NavigationManager.NavigateToAsync("/skia"))"></Button>
             <Button Text="Picker Playground" OnClick="@(async () => await NavigationManager.NavigateToAsync("/pickerplayground"))"></Button>
+            <Button Text="Editor Playground" OnClick="@(async () => await NavigationManager.NavigateToAsync("/editorplayground"))"></Button>
         </StackLayout>
     </ScrollView>
 </ContentPage>
