Update to Preview 10

--- a/samples/ControlGallery/_Imports.razor
+++ b/samples/ControlGallery/_Imports.razor
@@ -15,3 +15,5 @@
 @using ItemsLayoutOrientation = Microsoft.Maui.Controls.ItemsLayoutOrientation
 @using SwipeDirection = Microsoft.Maui.Controls.SwipeDirection
 @using SelectionMode = Microsoft.Maui.Controls.SelectionMode
+
+@using GradientStop = Microsoft.MobileBlazorBindings.Elements.GradientStop
