Use <div id="app">Loading...</div> for index.html

--- a/samples/HybridApp/MainPage.razor
+++ b/samples/HybridApp/MainPage.razor
@@ -11,7 +11,7 @@
 
         <BlazorWebView HostPage="wwwroot/index.html">
             <RootComponents>
-                <RootComponent Selector="app" ComponentType="typeof(HybridApp.WebUI.App) "/>
+                <RootComponent Selector="#app" ComponentType="typeof(HybridApp.WebUI.App) "/>
             </RootComponents>
         </BlazorWebView>
 
