Update CollectionView sample not to use TabbedPage as it's unsupported

--- a/samples/ControlGallery/Views/CollectionView/AddRemovePlayground.razor
+++ b/samples/ControlGallery/Views/CollectionView/AddRemovePlayground.razor
@@ -1,5 +1,7 @@
 ﻿@using System.Collections.ObjectModel
 
+@page "/collectionviewplayground/add-remove"
+
 <ContentPage Title="Add/Remove">
     <StackLayout>
         <Button Text="Add" OnClick="Add" />
