--- a/samples/ControlGallery/Views/CollectionView/GridLayoutPlayground.razor
+++ b/samples/ControlGallery/Views/CollectionView/GridLayoutPlayground.razor
@@ -1,4 +1,6 @@
-﻿<ContentPage Title="Grid Layout">
+﻿@page "/collectionviewplayground/grid"
+
+<ContentPage Title="Grid Layout">
     <CollectionView ItemsSource="_intItems"
                     SelectionMode="SelectionMode.Single"
                     ItemsLayout="_itemsLayout">
