--- a/samples/ControlGallery/Views/CollectionView/InfiniteScrollPlayground.razor
+++ b/samples/ControlGallery/Views/CollectionView/InfiniteScrollPlayground.razor
@@ -1,5 +1,7 @@
 ﻿@using System.Collections.ObjectModel
 
+@page "/collectionviewplayground/infinite-scroll"
+
 <ContentPage Title="Infinite scroll">
     <StackLayout>
         <CollectionView ItemsSource="_intItems"
