--- a/samples/ControlGallery/Views/CollectionView/Item.razor
+++ b/samples/ControlGallery/Views/CollectionView/Item.razor
@@ -1,13 +1,11 @@
-﻿<Frame BackgroundColor="Colors.Gray" 
-       CornerRadius="5" 
+﻿<Frame BackgroundColor="Colors.Gray"
+       CornerRadius="5"
        Margin="5" 
-       HeightRequest="24"
-       WidthRequest="24"
+       MinimumHeightRequest="24"
+       MinimumWidthRequest="24"
        HorizontalOptions="LayoutOptions.Center">
 
-    <Label Text="@Value.ToString()"
-           VerticalOptions="LayoutOptions.Center"
-           HorizontalOptions="LayoutOptions.Center" />
+    <Label Text="@Value.ToString()" />
 </Frame>
 
 @code {
