--- a/samples/ControlGallery/Views/CollectionView/SelectionPlayground.razor
+++ b/samples/ControlGallery/Views/CollectionView/SelectionPlayground.razor
@@ -1,4 +1,6 @@
-﻿<ContentPage Title="Selection">
+﻿@page "/collectionviewplayground/selection"
+
+<ContentPage Title="Selection">
     <StackLayout>
         <Button Text="Select Random" OnClick="SelectRandom" />
 
