Re-enable Skia sample

--- a/samples/ControlGallery/Views/SkiaCanvasDemo.razor
+++ b/samples/ControlGallery/Views/SkiaCanvasDemo.razor
@@ -1,5 +1,4 @@
-﻿@*
-@page "/skia/canvas"
+﻿@page "/skia/canvas"
 <ContentPage>
     <StackLayout Padding="20">
         <Slider Margin="20" ValueChanged="RotationSliderChanged" />
@@ -12,4 +11,3 @@
                       VerticalOptions="LayoutOptions.FillAndExpand" />
     </StackLayout>
 </ContentPage>
-*@
