Add FlexLayout to ControlGallery

--- a/samples/ControlGallery/Views/PlaygroundList.razor
+++ b/samples/ControlGallery/Views/PlaygroundList.razor
@@ -15,6 +15,7 @@
             <Button Text="CollectionView Playground" OnClick="@(async () => await NavigationManager.NavigateToAsync("/collectionviewplayground"))" />
             <Button Text="Grids" OnClick="@(async () => await NavigationManager.NavigateToAsync("/layouts/grids"))" />
             <Button Text="AbsoluteLayouts" OnClick="@(async () => await NavigationManager.NavigateToAsync("/layouts/absolute"))" />
+            <Button Text="FlexLayouts" OnClick="@(async () => await NavigationManager.NavigateToAsync("/layouts/flex"))" />
         </StackLayout>
     </ScrollView>
 </ContentPage>
