Add support RadioButtons (#25)

--- a/samples/ControlGallery/Views/PlaygroundList.razor
+++ b/samples/ControlGallery/Views/PlaygroundList.razor
@@ -7,6 +7,7 @@
             <BoxView Margin="10" HeightRequest="2" Color="Colors.DarkGray" HorizontalOptions="LayoutOptions.Fill" />
             <Button Text="Common controls" OnClick="@(async () => await NavigationManager.NavigateToAsync("/commoncontrols"))" />
             <Button Text="Labels" OnClick="@(async () => await NavigationManager.NavigateToAsync("/controls/labels"))" />
+            <Button Text="RadioButtons" OnClick="@(async () => await NavigationManager.NavigateToAsync("/controls/radiobuttons"))" />
             <Button Text="Navigation playground" OnClick="@(async () => await NavigationManager.NavigateToAsync("/navigation"))" />
             <Button Text="Gesture playground" OnClick="@(async () => await NavigationManager.NavigateToAsync("/gestureplayground"))" />
             <Button Text="Skia Playground" OnClick="@(async () => await NavigationManager.NavigateToAsync("/skia"))" />
