--- a/samples/ControlGallery/Views/PresentData/BoxViewPage.razor
+++ b/samples/ControlGallery/Views/PresentData/BoxViewPage.razor
@@ -1,13 +1,16 @@
 ﻿<ContentPage Title="BoxViews">
     <VerticalStackLayout Spacing="8">
+        <Label>Square BoxView</Label>
         <BoxView HeightRequest="30"
                  WidthRequest="30"
                  Color="Colors.OrangeRed"
                  CornerRadius="8" />
 
+        <Label>BoxView with height 1</Label>
         <BoxView HeightRequest="1"
                  Color="Colors.LightGray" />
 
+        <Label>BoxView with gradient background</Label>
         <BoxView HeightRequest="30">
             <Background>
                 <LinearGradientBrush EndPoint="new(1,0)">
