--- a/samples/ControlGallery/Views/Collections/CollectionView/AddRemovePage.razor
+++ b/samples/ControlGallery/Views/Collections/CollectionView/AddRemovePage.razor
@@ -3,14 +3,17 @@
 @page "/collectionviewplayground/add-remove"
 
 <ContentPage Title="Add/Remove">
-    <StackLayout>
-        <Button Text="Add" OnClick="Add" />
-        <Button Text="Remove selected" OnClick="Remove" />
-        <Button Text="Remove all" OnClick="RemoveAll" />
+    <Grid RowDefinitions="Auto,*">
+        <VerticalStackLayout Grid.Row="0">
+            <Button Text="Add" OnClick="Add" />
+            <Button Text="Remove selected" OnClick="Remove" />
+            <Button Text="Remove all" OnClick="RemoveAll" />
+        </VerticalStackLayout>
 
         <CollectionView ItemsSource="_intItems"
                         SelectionMode="SelectionMode.Single"
-                        @bind-SelectedItem="_selectedItem">
+                        @bind-SelectedItem="_selectedItem"
+                        Grid.Row="1">
             <EmptyView>
                 <Label Text="Nothing here." />
             </EmptyView>
@@ -19,7 +22,7 @@
                 <Item Value="@context" />
             </ItemTemplate>
         </CollectionView>
-    </StackLayout>
+    </Grid>
 </ContentPage>
 
 @code {
