Add gestures events to View (#39)

--- a/samples/ControlGallery/Views/Gestures/GestureRecognizersPage.razor
+++ b/samples/ControlGallery/Views/Gestures/GestureRecognizersPage.razor
@@ -1,6 +1,6 @@
 ﻿@page "/gestureplayground"
 
-<ContentPage Title="Gestures">
+<ContentPage Title="Gesture Recognizers">
     <StackLayout Margin="new Thickness(20)">
 
         <Label Text="Tap me or pan me"
