--- a/samples/ControlGallery/Views/Layouts/FlexLayoutPage.razor
+++ b/samples/ControlGallery/Views/Layouts/FlexLayoutPage.razor
@@ -17,7 +17,7 @@
 
 
             <Label Text="FlexLayout with wrapping" />
-            <FlexLayout Wrap="FlexWrap.Wrap" HeightRequest="300">
+            <FlexLayout Wrap="FlexWrap.Wrap">
                 @foreach (var color in _colors)
                 {
                     <BoxView Color="color" HeightRequest="50" WidthRequest="50" Margin="5" />
